# datakit-data

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
datakit_data/: __init__.py  extra_flags.py  init.py  project_mixin.py  s3.py  sync_markers.py
datakit_data/commands/: init.py  pull.py  push.py  status.py
docs/: Makefile  conf.py  credits.rst  datakit_data.commands.rst  datakit_data.rst  index.rst  installation.rst  make.bat  modules.rst  quickstart.rst  readme.rst  usage.rst
tests/: conftest.py  test_extra_flags.py  test_init.py  test_s3.py
tests/commands/: test_init.py  test_pull.py  test_push.py  test_status.py
